@@ -1,4 +1,6 @@
 ver 0.23.13 (not yet released)
+* input
+  - curl: fix busy loop after connection failed
 
 ver 0.23.12 (2023/01/17)
 * input
